# AKRenderer

./: .gitignore  .travis.yml  CMakeLists.txt  main.cpp
Libraries/: CMakeLists.txt
Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
Renderer/Components/: CMakeLists.txt  Component.cpp  Component.h  Transform.cpp  Transform.h
